Revise palmer and draft others

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,15 +3,14 @@ project:
   output-dir: docs
 
 website:
-  title: "My Awesome CSCI 0451 Blog"
+  title: "Emmanuel Towner"
   navbar:
     background: "#112a39"
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com//EpicET.github.io
+      
 
 format:
   html:
