--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,10 +20,12 @@ website:
 
 format:
   html:
-    title-block-banner: img/landscape.png
+    title-block-banner: img/network.jpeg
     title-block-banner-color: white
     respect-user-color-scheme: true
-    theme: cosmo
+    theme:
+      light: cosmo
+      dark: darkly
     css: styles.css
 
 
